# csd-store

./: .analytics  .gitignore
kv-store/: .cproject  .project  kv-store.prj
kv-store-host/src/: CMakeLists.txt  client.cc  client.h  client_manager.cc  client_manager.h  common_log.cc  common_log.h  config.json  kvstore.cc  kvstore.h  log.cc  log.h  main.cc  memkvstore.cc  memkvstore.h  multipaxos.cc  multipaxos.h  multipaxos.proto  protobuf.h  replicant.cc  replicant.h  xrt_log.cc  xrt_log.h
kv-store/src/: CMakeLists.txt  client.cc  client.h  host.cpp  log.cc  log.cpp  log.h  multipaxos.cc  multipaxos.h  multipaxos.proto  protobuf.h  replicant.cc  replicant.h
kv-store_kernels/: .cproject  .project  kv-store_kernels.prj
kv-store_kernels/src/: kv-hashmap.cpp  protobuf.h
kv-store_system/: .cproject  .project  kv-store_system.sprj
kv-store_system_hw_link/: .cproject  .project  kv-store_system_hw_link.prj
